--- a/mvc/CI-Platform/CI-Platform-web/Views/Admin/_AdminLayout.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Admin/_AdminLayout.cshtml
@@ -49,7 +49,7 @@
                     </a>
                 </li>
                 <li class="tooltip-element" data-tooltip="1">
-                <a asp-controller="Admin" asp-action="CmsPage" class="nav-link"  data-active="1">
+                    <a asp-controller="Admin" asp-action="CmsPage" class="nav-link"  data-active="1">
                         <div class="icon">
                             <i class="fa-solid fa-file-lines"></i>
                         </div>
@@ -57,7 +57,7 @@
                     </a>
                 </li>
                 <li class="tooltip-element" data-tooltip="2">
-                <a href="#" data-active="2" class="nav-link">
+                    <a asp-controller="Admin" asp-action="AdminMission" data-active="2" class="nav-link">
                         <div class="icon">
                             <i class="bi bi-bullseye"></i>
                         </div>
@@ -65,7 +65,7 @@
                     </a>
                 </li>
                 <li class="tooltip-element" data-tooltip="3">
-                <a asp-controller="Admin" asp-action="MissionTheme" data-active="3" class="nav-link">
+                    <a asp-controller="Admin" asp-action="MissionTheme" data-active="3" class="nav-link">
                         <div class="icon">
                             <i class="bi bi-wallet-fill"></i>
                         </div>
@@ -73,7 +73,7 @@
                     </a>
                 </li>
                 <li class="tooltip-element" data-tooltip="4">
-                <a asp-controller="Admin" asp-action="MissionSkill" data-active="4" class="nav-link">
+                    <a asp-controller="Admin" asp-action="MissionSkill" data-active="4" class="nav-link">
                         <div class="icon">
                             <i class="fa-sharp fa-solid fa-screwdriver-wrench"></i>
                         </div>
@@ -81,7 +81,7 @@
                     </a>
                 </li>
                 <li class="tooltip-element" data-tooltip="5">
-                <a asp-controller="Admin" asp-action="MissionApplication" data-active="5" class="nav-link">
+                    <a asp-controller="Admin" asp-action="MissionApplication" data-active="5" class="nav-link">
                         <div class="icon">
                             <i class="fa-solid fa-folder"></i>
                         </div>
@@ -89,7 +89,7 @@
                     </a>
                 </li>
                 <li class="tooltip-element" data-tooltip="6">
-                <a asp-controller="Admin" asp-action="Story" data-active="6" class="nav-link">
+                    <a asp-controller="Admin" asp-action="Story" data-active="6" class="nav-link">
                         <div class="icon">
                             <i class="fa-duotone fa-book"></i>
                         </div>
@@ -109,7 +109,7 @@
                     <span>CMS Page</span>
                     <span>Mission</span>
                     <span>Theme</span>
-                    <span> Skills</span>
+                    <span>Skills</span>
                     <span> Applications</span>
                     <span>Story</span>
                     <span>Banner</span>
