--- a/mvc/CI-Platform/CI-Platform-web/Views/Shared/Components/UserHeader/_ProfileSection.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Shared/Components/UserHeader/_ProfileSection.cshtml
@@ -7,7 +7,7 @@
 
         <img class="icon profile-icon rounded-circle" src="~/images/Upload/User/@Model.Avtar"> &nbsp;
         @Model.Username
-        <span id="user-id d-none"> @Model.UserId </span>
+        <span id="user-id " class="d-none"> @Model.UserId </span> &nbsp;
         <img src="~/images/drop-down.png">
     </a>
     <ul class="dropdown-menu dropdown-menu-light" aria-labelledby="navbarDarkDropdownMenuLink">
