--- a/mvc/CI-Platform/CI-Platform-web/Views/Admin/MissionApplication.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Admin/MissionApplication.cshtml
@@ -56,7 +56,7 @@
         <div class="modal fade" id="ApproveOrDeclineModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <form method="post">
                 <div class="modal-dialog">
-                    <div class="modal-content" id="ApplicationModal">
+                    <div class="modal-content">
                         <div class="modal-header">
                             <input name="HiddenApplicationId" id="HiddenApplicationId" type="hidden" />
                             <input name="HiddenStatus" id="HiddenStatus" type="hidden" />
@@ -64,13 +64,12 @@
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         
-                        <div class="modal-body">
-                            <div>Are you sure you want to approve this ?? </div>
+                        <div class="modal-body" id="ApplicationModalBody">
+                            <div></div>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="me-3 btn rounded-pill btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
                             <button type="submit" asp-controller="Admin" asp-action="ApproveOrDeclineApplication" class="btn rounded-pill btn-outline-success">Yes</button>
-
                         </div>
                     </div>
                 </div>
