--- a/mvc/CI-Platform/CI-Platform-web/Views/Admin/Story.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Admin/Story.cshtml
@@ -40,39 +40,64 @@
                         <td>
                             <button class="btn formBtn" id="ViewStoryBtn" data-user-id="@story.User.UserId" data-mission-id="@story.Mission.MissionId">
                                 View
-                                 </button>&nbsp;
-                            <button class="p-0 btn ApproveOrDeclineApplication" id="ApprovalBtn" data-bs-toggle="modal" data-bs-target="#StoryModal">
+                            </button>&nbsp;
+                            <button class="p-0 btn GetStoryIdBtn" id="StoryApprovalBtn" data-bs-toggle="modal" data-bs-target="#StoryModal" data-story-id="@story.StoryId" data-status="1">
                                 <i class="fa-regular fa-circle-check" style="color: #00ff00;"></i>
                             </button>
                             &nbsp;
-                            <button class="btn p-0 ApproveOrDeclineApplication" id="DeclineBtn" data-bs-target="#StoryModal" data-bs-toggle="modal">
+                            <button class="btn p-0 GetStoryIdBtn" id="StoryDeclineBtn" data-bs-target="#StoryModal" data-bs-toggle="modal" data-story-id="@story.StoryId" data-status="0">
                                 <i class="fa-regular fa-circle-xmark" style="color: #ff0000;"></i>
                             </button>
                             &nbsp;
-                            <button class="p-0 btn" data-bs-toggle="modal" id="" data-bs-target="#StoryModal">
+                            <button class="p-0 btn GetStoryIdBtn" data-bs-toggle="modal" data-bs-target="#StoryDeleteModal" data-story-id="@story.StoryId">
                                 <i class="bi bi-trash"> </i>
                             </button>
                         </td>
                     </tr>
                 }
         </table>
+       @* Story approve or decline modal*@
         <div class="modal fade" id="StoryModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <form method="post">
                 <div class="modal-dialog">
-                    <div class="modal-content" id="ApplicationModal">
+                    <div class="modal-content">
                         <div class="modal-header">
-                            <input name="HiddenApplicationId" id="HiddenApplicationId" type="hidden" />
+                            <input name="HiddenStoryId" class="HiddenStoryId" type="hidden" />
                             <input name="HiddenStatus" id="HiddenStatus" type="hidden" />
                             <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
 
-                        <div class="modal-body">
-                            <div>Are you sure you want to approve this ?? </div>
+                        <div class="modal-body" id="StoryModalBody">
+                            <div> </div>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="me-3 btn rounded-pill btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
-                            <button type="submit" asp-controller="Admin" asp-action="ApproveOrDeclineApplication" class="btn rounded-pill btn-outline-success">Yes</button>
+                            <button type="submit" asp-controller="Admin" asp-action="ApproveOrDeclineStory" class="btn rounded-pill btn-outline-success">Yes</button>
+
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+
+        @*story delete modal*@
+
+        <div class="modal fade" id="StoryDeleteModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <form method="post">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <input name="HiddenStoryId"  class="HiddenStoryId" type="hidden" />
+                            <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <span>Are you sure you want to delete this story?? </span>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="me-3 btn rounded-pill btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
+                            <button type="submit" asp-controller="Admin" asp-action="DeleteStory" asp class="btn rounded-pill btn-outline-danger">Delete</button>
 
                         </div>
                     </div>
