--- a/mvc/CI-Platform/CI-Platform-web/wwwroot/css/AdminStyle.css
+++ b/mvc/CI-Platform/CI-Platform-web/wwwroot/css/AdminStyle.css
@@ -29,7 +29,7 @@ a{
     text-decoration: none !important;
 }
 
-ul,li {
+ul,li{
     list-style: none !important;
 }
 .profile-icon {
@@ -38,7 +38,7 @@ ul,li {
     margin-top: 0.25rem
 }
 .dropdown-toggle::after {
-    display: none;
+    display: none !important;
 }
 nav {
     position: sticky;
@@ -501,3 +501,258 @@ main {
         border-color: #F88634 !important;
     }
 /*user crud ends*/
+/*drag and drop*/
+/*.drag-card {
+    width: 95%;
+    height: auto;
+    overflow: hidden;
+    margin-left:1rem;
+}
+
+    .drag-card .top {
+        width: 100%;
+    }
+
+
+    .drag-card button {
+        outline: 0;
+        border: 0;
+        -webkit-appearence: none;
+        background-color: white;
+        color: black;
+        border-radius: 4px;
+        transition: 0.3s;
+        cursor: pointer;
+        font-weight: 400;
+        font-size: 0.8rem;
+        padding: 8px 13px;*/
+        /*    addded afterwards for btn when img is fetched*/
+
+        /*position: absolute;
+        right: 1%;
+        opacity: 30%;
+    }
+
+        .drag-card button:hover {
+            opacity: 0.8;
+        }
+
+        .drag-card button:active {
+            transform: translateY(5px);
+        }
+
+    .drag-card .drag-area{
+        width: 100%;
+        height: 150px;
+        border-radius: 5px;
+        border: 2px dashed #d5d5e1;
+        color: #c8c9dd;
+        font-size: 0.9rem;
+        font-weight: 500;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        user-select: none;
+        -webkit-user-select: none;
+        margin-top: 10px;
+    }
+    .drag-card input {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+    }
+        .drag-card .drag-area .visible {
+            font-size: 18px;
+        }
+
+    .drag-card .select {
+        color: #5256ad;
+        margin-left: 5px;
+        cursor: pointer;
+        transition: 0.4s;
+    }
+
+        .drag-card .select:hover {
+            opacity: 0.6;
+        }
+
+    .drag-card .container-img {
+        width: 100%;
+        height: auto;
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-start;
+        flex-wrap: wrap;
+        max-height: 400px;
+        overflow-y: auto;
+    }
+
+        .drag-card .container-img .image {
+            max-width: 100px;
+            width: 100%;
+            margin-top: 30px;
+            margin-right: 30px;
+            height: 100px;
+            position: relative;
+        }
+
+            .drag-card .container-img .image img {
+                width: 100%;
+                height: 100%;
+                border-radius: 1px;
+            }
+
+            .drag-card .container-img .image span {
+                position: absolute;
+                top: -2px;
+                right: 5px;
+                font-size: 20px;
+                cursor: pointer;
+            }*/
+
+    /*dragover class will used in drag and drop system */
+    /*.drag-card .drag-area.dragover {
+        background: rgba(0, 0, 0, 0.4);
+    }
+
+        .drag-card .drag-area.dragover .on-drop {
+            display: inline;
+            font-size: 28px;
+        }
+
+        .drag-card input,
+        .drag-card .drag-area .on-drop,
+        .drag-card .drag-area.dragover .visible {
+            display: none;
+        }*/
+/* end drag drop css */
+
+
+/* darg and drop */
+.drag-card {
+    width: 100% !important;
+    height: auto !important;
+    overflow: hidden !important;
+}
+
+    .drag-card .top {
+        width: 100% !important;
+   
+    }
+
+
+    .drag-card button {
+        outline: 0 !important;
+        border: 0 !important;
+        -webkit-appearence: none !important;
+        background-color: white !important;
+        color: black !important;
+        border-radius: 4px !important;
+        transition: 0.3s !important;
+        cursor: pointer !important;
+        font-weight: 400 !important;
+        font-size: 0.8rem !important;
+        padding: 8px 13px !important;
+        /*    addded afterwards for btn when img is fetched*/
+
+        position: absolute !important;
+        right: 1% !important;
+        opacity: 30% !important;
+    }
+
+        .drag-card button:hover {
+            opacity: 0.8 !important;
+        }
+
+        .drag-card button:active {
+            transform: translateY(5px) !important;
+        }
+
+    .drag-card .drag-area {
+        width: 100% !important;
+        height: 150px !important;
+        border-radius: 5px !important;
+        border: 2px dashed #d5d5e1 !important;
+        color: #c8c9dd !important;
+        font-size: 0.9rem !important;
+        font-weight: 500 !important;
+        position: relative !important;
+        display: flex !important;
+        justify-content: center !important;
+        align-items: center !important;
+        user-select: none !important;
+        -webkit-user-select: none !important;
+        margin-top: 10px !important;
+    }
+
+        .drag-card .drag-area .visible {
+            font-size: 18px !important;
+        }
+
+    .drag-card .select {
+        color: #5256ad !important;
+        margin-left: 5px !important;
+        cursor: pointer !important;
+        transition: 0.4s !important;
+    }
+
+        .drag-card .select:hover {
+            opacity: 0.6 !important;
+        }
+
+    .drag-card .container-img {
+        width: 100% !important;
+        height: auto !important;
+        display: flex !important;
+        justify-content: flex-start !important;
+        align-items: flex-start !important;
+        flex-wrap: wrap !important;
+        max-height: 400px !important;
+        overflow-y: auto !important;
+    }
+
+        .drag-card .container-img .image {
+            max-width: 100px !important;
+            width: 100% !important;
+            margin-top: 30px !important;
+            margin-right: 30px !important;
+            height: 100px !important;
+            position: relative !important;
+        }
+
+            .drag-card .container-img .image img {
+                width: 100% !important;
+                height: 100% !important;
+                border-radius: 1px !important;
+            }
+
+            .drag-card .container-img .image span {
+                position: absolute !important;
+                top: -2px !important;
+                right: 5px !important;
+                font-size: 20px !important;
+                cursor: pointer !important;
+            }
+
+    /*dragover class will used in drag and drop system */
+    .drag-card .drag-area.dragover {
+        background: rgba(0, 0, 0, 0.4) !important;
+    }
+
+        .drag-card .drag-area.dragover .on-drop {
+            display: inline !important;
+            font-size: 28px !important;
+        }
+
+        .drag-card input,
+        .drag-card .drag-area .on-drop,
+        .drag-card .drag-area.dragover .visible {
+            display: none !important;
+        }
+    .drag-card input{
+        position: absolute;
+        top: 50%;
+        left : 40%;
+    }
+/* end drag drop css */
