--- a/mvc/CI-Platform/CI-Platform-web/Views/Auth/Components/Banner/_BannerSection.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Auth/Components/Banner/_BannerSection.cshtml
@@ -19,7 +19,7 @@
 
                         <div class="carousel-caption d-none d-md-block">
                             <h1>@banner.Title</h1>
-                            <p>@Html.Raw(banner.Description)</p>
+                            <p class="bg-transparent">@Html.Raw(banner.Description)</p>
                         </div>
                     </div>
 
