--- a/mvc/CI-Platform/CI-Platform-web/Views/Story/ShareStory.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Story/ShareStory.cshtml
@@ -78,7 +78,7 @@
                 </span>
                 <span class="on-drop">Drop images here</span>
             </div>
-            <input name="file" type="file" accept=".png, .jpg, .jpeg" class="file" multiple id="img-input" />
+            <input name="file" type="file" accept=".png, .jpg, .jpeg" class="file" multiple id="img-input" hidden/>
             <!-- IMAGE PREVIEW CONTAINER -->
             <div class="container-img mt-3" id="img-output"> </div>
         </div>
