--- a/mvc/CI-Platform/CI-Platform-web/Views/Admin/AdminMission.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Admin/AdminMission.cshtml
@@ -60,7 +60,7 @@
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <input name="HiddenUserId" id="HiddenUserId" type="hidden" />
+                            <input name="HiddenMissionId" id="HiddenMissionId" type="hidden" />
                             <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
