--- a/mvc/CI-Platform/CI-Platform-web/Views/Home/_MissionDisplayPartial.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Home/_MissionDisplayPartial.cshtml
@@ -52,9 +52,9 @@
                         else
                         {
 
-                            @foreach (var img in obj.missionMedia.Take(1))
+                            @foreach (var img in obj.missionMedia)
                             {
-                                <img src="~/images/@img" class=" card-img-top">
+                                <img src="~/images/Upload/Mission/@img" class=" card-img-top">
                             }
                         }
 
@@ -134,10 +134,11 @@
                         <h3 class="card-title ">@obj.MissionCard.Title</h3>
                         <p class="card-text align-items-center">
                             @{
-                                int maxLength = 100;
-                                string description = obj.MissionCard.Description.Length > maxLength
-                                ? @obj.MissionCard.Description.Substring(0, maxLength) + "..."
-                                : @obj.MissionCard.Description;
+                                int maxLength = 50;
+                                string description = obj.MissionCard.ShortDescription!.Length > maxLength
+                                ? @obj.MissionCard.ShortDescription!.Substring(0, maxLength) + "..."
+                                : @obj.MissionCard.ShortDescription!;
+                               
                             }
 
                             @description
@@ -191,7 +192,7 @@
                                     }
                                     else
                                     {
-                                        <span>From @obj.MissionCard.StartDate.Value.ToShortDateString() until @obj.MissionCard.EndDate.Value.ToShortDateString()</span>
+                                        <span>From @obj.MissionCard.StartDate!.Value.ToShortDateString() until @obj.MissionCard.EndDate!.Value.ToShortDateString()</span>
                                     }
                                 }
                                 else
@@ -203,6 +204,8 @@
                                 }
                             </div>
                             <div class="row gutter mt-4 mb-2 justify-content-around">
+                                @if (obj.MissionCard.MissionType.Equals("Time"))
+                                {
                                 <div class="col card-detail">
                                     <img class="icon-detail my-2" src="~/images/Seats-left.png" alt="seats left">
                                     <div class="card-detail-text">
@@ -211,12 +214,10 @@
                                         <span>Seats left</span>
                                     </div>
                                 </div>
-                                @if (obj.MissionCard.MissionType.Equals("Time"))
-                                {
                                     <div class="col card-detail">
                                         <img class="icon-detail my-2" src="~/images/deadline.png" alt="deadline">
                                         <div class="card-detail-text ">
-                                            <p class="deadline">@obj.MissionCard.StartDate.Value.AddDays(-1).ToShortDateString()</p>
+                                            <p class="deadline">@obj.MissionCard.StartDate!.Value.AddDays(-1).ToShortDateString()</p>
                                             <span>Deadline</span>
                                         </div>
                                     </div>
@@ -229,9 +230,9 @@
                                             <img class="icon-detail my-2" src="~/images/achieved.png" alt="deadline">
                                             <div class="card-detail-text">
                                                 <div class="progress">
-                                                    <div class="progress-bar" role="progressbar" aria-label="Warning example" style="background-color: #F88634; width:@goal_mission.GoalValue%" aria - valuenow="@goal_mission.GoalValue" aria-valuemin="0" aria-valuemax="100"></div>
+                                                    <div class="progress-bar" role="progressbar" aria-label="Warning example" style="background-color: #F88634; width:@obj.updatedGoalValue%" aria-valuenow="@obj.updatedGoalValue" aria-valuemin="0" aria-valuemax="@goal_mission.GoalValue%"></div>
                                                 </div>
-                                                <span>@goal_mission.GoalValue achieved</span>
+                                                <span>@obj.updatedGoalValue achieved</span>
                                             </div>
                                         </div>
                                     }
@@ -293,9 +294,9 @@
                         else
                         {
 
-                            @foreach (var img in obj.missionMedia.Take(1))
+                            @foreach (var img in obj.missionMedia)
                             {
-                                <img src="~/images/@img" class="card-img-top">
+                                <img src="~/images/Upload/Mission/@img" class=" card-img-top">
                             }
                         }
 
@@ -403,7 +404,16 @@
                             </div>
                         </div>
                         <h3 class="card-title">@obj.MissionCard.Title</h3>
-                        <p class="card-text">@obj.MissionCard.ShortDescription</p>
+                        <p class="card-text">
+                            @{
+                                int maxLength = 50;
+                                string description = obj.MissionCard.ShortDescription!.Length > maxLength
+                                ? @obj.MissionCard.ShortDescription!.Substring(0, maxLength) + "..."
+                                : @obj.MissionCard.ShortDescription!;
+                            }
+
+                            @description
+                        </p>
                         <div class="card-text d-flex justify-content-between pt-4">
                             <div>
                                 <div class="row gutter justify-content-around">
@@ -420,8 +430,8 @@
                                         <div class="col card-detail-listview">
                                             <img class="icon-detail icon" src="~/images/calender.png" alt="calender">
                                             <div class="card-detail-text">
-                                                <p>From  @obj.MissionCard.StartDate.Value.ToShortDateString()</p>
-                                                <p>Until @obj.MissionCard.EndDate.Value.ToShortDateString()</p>
+                                                <p>From  @obj.MissionCard.StartDate!.Value.ToShortDateString()</p>
+                                                <p>Until @obj.MissionCard.EndDate!.Value.ToShortDateString()</p>
                                             </div>
                                         </div>
 
@@ -434,10 +444,10 @@
                                             <div class="col card-detail-listview">
                                                 <img class="icon-detail icon" src="~/images/achieved.png" alt="deadline">
                                                 <div class="card-detail-text">
-                                                    <div class="progress" role="progressbar" aria-label="Warning example" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                                                        <div class="progress-bar" style=" background-color: #F88634;"></div>
+                                                    <div class="progress">
+                                                        <div class="progress-bar" role="progressbar" aria-label="Warning example" style="background-color: #F88634; width:@obj.updatedGoalValue%" aria-valuenow="@obj.updatedGoalValue" aria-valuemin="0" aria-valuemax="@goal_mission.GoalValue%"></div>
                                                     </div>
-                                                    <p>@goal_mission.GoalValue</p>
+                                                    <p>@obj.updatedGoalValue</p>
                                                     <p>achieved</p>
                                                 </div>
                                             </div>
